main functionality done

--- a/layout/index.html
+++ b/layout/index.html
@@ -9,5 +9,9 @@
   </head>
   <body>
     hola
+
+    <a href="%__POSTS__%/00-hello.html">primerpost</a>
+
+    <a href="%__POSTS__%/ayer/joder.html">segundo</a>
   </body>
 </html>
