added relative paths to site output

--- a/layout/ooo/aaa.html
+++ b/layout/ooo/aaa.html
@@ -8,10 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    eo
-
-    <a href="ooo/aaa.html">otro link</a>
-
-    <a href="%__POSTS__%/00-hello.html">primerpost</a>
+    otro post xd
+    <a href="%__POSTS__%/ayer/joder.html">segundo</a>
   </body>
 </html>
