--- a/layout/ooo/aaa.html
+++ b/layout/ooo/aaa.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    otro post xd
+    como estas
     <a href="%__POSTS__%/ayer/joder.html">segundo</a>
   </body>
 </html>
