made index.html

--- a/layout/index.html
+++ b/layout/index.html
@@ -9,13 +9,30 @@
     <title>Document</title>
   </head>
   <body>
-    eo
+    <header id="main-header">
+      <h1 id="logo">Blog</h1>
+      <nav>
+        <ul>
+          <li>a</li>
+          <li>eo</li>
+        </ul>
+        <button id="change-theme-btn" class="btn btn-dark btn-icon">
+          Change theme
+        </button>
+      </nav>
+    </header>
 
-    <button id="change-theme-btn" class="btn btn-primary">Change theme</button>
+    <main id="main-content">
+      <a href="ooo/aaa.html">otro link</a>
+      <a href="%__POSTS__%/00-hello.html">primerpost</a>
+    </main>
 
-    <a href="ooo/aaa.html">otro link</a>
-
-    <a href="%__POSTS__%/00-hello.html">primerpost</a>
+    <footer id="main-footer">
+      <p>
+        Made by
+        <a href="http://" target="_blank" rel="noopener noreferrer">FernanEd</a>
+      </p>
+    </footer>
 
     <script src="%__PUBLIC__%/scripts/changeTheme.js"></script>
   </body>
